# influxdb_dummy_data_generator

./: .aider.chat.history.md  .env  .gitignore  .projectile-cache.eld  APP_SCRIPTS_README.md  Dockerfile  README.md  app.py  check_app.sh  current_route.json  dynamic_route_manager.py  generate_car_data.py  kafka-client.py  kafka-topic-manager.py  kuk11-2-1-LI.json  kuk11-2-1-LO.json  kuk11-2.3-dv.json  kuk11-3.2-RJ.json  kuk11-3.2-VC.json  kuk11-3.2-WP.json  pyproject.toml  requirements.txt  run_app.sh  stop_app.sh  test_app.py  test_generate_car_data.py  view_logs.sh
.github/workflows/: ci.yml  dependency-update.yml
templates/: index.html
