[project]
name = "influx-dummy-data-generator"
version = "0.1.0"
description = "Generate dummy car movement data for InfluxDB"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "Flask==2.3.3",
    "python-dotenv==1.0.0",
    "influxdb-client==1.38.0",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "flake8==6.1.0",
    "black==23.12.1",
    "safety==2.3.5",
    "bandit==1.7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
