[project]
name = "influx-dummy-data-generator"
version = "0.1.0"
description = "Generate dummy car movement data for InfluxDB"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "Flask>=2.3.3",
    "python-dotenv>=1.0.0",
    "influxdb-client>=1.38.0",
    "requests>=2.31.0",
    "kafka-python>=2.0.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "flake8>=6.1.0",
    "black>=23.12.1",
    "safety>=3.0.0",
    "bandit>=1.7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "templates/",
    "static/",
    "requirements.txt"
]
exclude = [
    ".git/",
    ".github/",
    ".pytest_cache/",
    "__pycache__/",
    "*.pyc",
    ".env*",
    "uv.lock",
    "test_*.py"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
